# legacylens

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: grade_responses.py  llm_config.py  llm_report.py  run_benchmark.py  run_ingest_benchmark.py  run_llm_benchmark.py
benchmarks/results/: benchmark_20260303_180817.csv  benchmark_20260303_180817.json
docs/: ai-cost-analysis.md  ai-development-log.md  final-rag-architecture.md  slide-prompts.md
legacylens/: chain.py  config.py  models.py  retriever.py  vectorstore.py
scripts/: warmup_cache.py
tests/: test_chain.py  test_refactor_units.py  test_web_api.py  test_web_cache_key.py  test_websocket_stream.py
web/: app.py
web/templates/: index.html
